Configured fingerprint registration for new student using email address

--- a/StudentRecordManagementSystem/BioDataForm.resx
+++ b/StudentRecordManagementSystem/BioDataForm.resx
@@ -121,115 +121,7 @@
     <value>17, 17</value>
   </metadata>
   <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
-  <data name="picRightIndex.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
-    <value>
-        iVBORw0KGgoAAAANSUhEUgAAAFAAAABQCAYAAACOEfKtAAAABGdBTUEAALGPC/xhBQAAF+9JREFUeF7t
-        nAmYXlV5x+m+73trN2tL983a2motSvLNTBBwKVC1ZSkIIlWrrVtbMFSY7/smYSkiQsqqUmQHFWQ1RTL3
-        3gkBggpBCIRWC1hDHCWUbDPx/3uX+90ZZ3hglhjsvM9znrnvOeeec+573v2cb/ZYgAVYgAVYgAVYgAVw
-        2K+76gcWD5YvanXL1/V3yn9pdcqz+7rlJ/o65bD+fqa/UzxA6etUd/Z3y1Wqv8H6tMt39reLV7ZOHP7t
-        55+15jtiuG9+6Du5+NFWt/rL/m5xloixTmWHys7ZFBH0/4K4J4moB+w9OPJjMd03ByzqrPoFEezd+sAR
-        lQkE4+P193b9vUIct7yvUxzT1xnZp79TvXhJp/idRe3bnksZaBd/0Dc08ufqNyCOPEqbMKT3Lhf+af2d
-        vAnbVW5otasjW8uGfzKW8eyCAy655NvgBn3ISpWx+DDKZhHpKonkW/q6xR8PnHbtd8UrM4a9lq78fm3Q
-        3hr3OI1/k0pNUNugdrkouu7+AEG08NerrJ/wEd3qEonZqw44ufie6Oqwc+e3oMf6B6slIujfiws/MLUO
-        LNdqnFLEuLrVqc6UznwP47WWjfxyjFQDXKe+R2uTbtF7XxK3Lo6m3ReM47rVG7XwLyTh9LF3iXCHwSHR
-        zaA1WPy62v9JHPNx/X2s7j/z8hiE7WtX/yDx/72Y5tkD/e1yL33E2vqDulXRGipeDndFlwmgPv9b91Vx
-        DoOYxanagDelDuxfVv1u6sDFQ8O/3+oUf2ZcZ33Krsq14tL/bo4VZb3ryNW/FVPunoBF1Qd8JBdu4tYt
-        94vmaUGi+ndyWU7WOwf2nbjmZ6J6xvDyE4qfE8H/WiJ7jsbcmOuJcqt08WuQkOi+ewAWsbH7j2Nl0yAg
-        sug16/g0AJ2FETDOQgd2quvg4tSBGh99ukblJvW5SHVtiewbeAc/MoYx0NzfvrhdtTTGBeqLhU9C3ie9
-        eQjt0fUbA0uX7vxWHF4tCFeBhX0SN8UaJbISw4NV9z8qY4uHql+1+kmwT/vWH1G/14oA6QvmR86kYHHv
-        QPxF9Jc2Oc3nkbXvlA/2+hef1Qb0RZddC+y2dv5jsZixvnbxr7lg9E1YvfywlfsuXfO99qKAfug2rLHa
-        tjT6UTbpo27W3zOkAt6MRZ6sA+Hoxd2RP7Loo1O9S33PVRHh6o3M8iWVFQPd6oUxtXElYqz6erPg5Gje
-        NTAw+Kmf0EfeFgt4TAsYoB6OjA8KohQPw11pQCAiRFHbf8W7lB1GMIVjEGU2+qm17K7vCyN2oso9jTnM
-        C9A6j07VQsintf6j2r6qssEG2BWAiIq77o2F3Q9HUL/3idVPCb8h6sWR5fsWddb8EG3a9e9WnVyVCRb3
-        jla7fOvi7qqfpU+CEVkch+6KKgM+WHrwEyL2AyIEEceIni9VaUv8D4cr2cDobhAukojJRsa87fIh9F/2
-        HVha/SDFXphvGBga/hUtAp3GYm6HaNT3t4dfoI8yn4+/rc7wS+wFgTnFDUcabkPhR7MB/prE+Vi1E971
-        xFDRSXQxY6S6p/QTNfeoitY3fN6SwZFfi1ed+O3q1erTc6/03BTtXQLoOZ+8uiV3TQTpU93jsaibEG/q
-        912+5seFXxb1lJH+weE/pQ3gfZxtjXVnow9lBxYXC4xIRncDuBOOh+CMhbsigr1X7zBPbmyzyI0Z6R4Z
-        GRo3erg45YZoN0mZbL3nDSCKdMyh+WHoNy1iayzmvEwl6aMGhLu4yr0Rvi/1AATWok8Q4b4c76lUX9a4
-        59OvaWyeKex3cvG8Vrs4S0R6pDe2jb9NuveigdN8050jy3eqzXW11oj+tUF2FZDd0OTjsYBOGgrh6DoL
-        4MWd1ydHHrD07u8Mpf0Ve8c/7DrSWehI+iQQ05qlNLGuLlBfkgK3qzyoMS0WVhlWORdCoCbY3HjdYF/L
-        +mDlq9xgyvbF4jit1fRf31D5h7gy0fZVIht7eb5Bkx2oYkSCKNSZBW6X74/FSAyrY2tFLV2jutptMMI2
-        9Q8+o6WnqjODQPnBz7RskX69baAzcnBuKMTSuuD4Jxr9RvceKvpphuNjk6gfkyT8kr03XzAwVPyFJrJd
-        1WLfTZ1zV3lRLOIJi32pl0siTh1UnaeUpNua1hUrHaJUG5ko0qmKQEiKdoqjVPowVOkHEgvjrmB91dZW
-        P6z/RH+yK7xb/UctAbaW8t/0XjOddnES2iy5NnAuUmrTgozI8zRpxJfFqdS5P1VeEQvaREqe+iVDq39a
-        IkFmmPotECp9PIsKJPaqb4hz+SDEJkkwkxDLCVQcqffv1Nh1DlAbMaZo6aPaZMsCae7n6jvSiEiCigde
-        ccrKH7ZB5hPMl8M6MrH8MSOGdq/BeV8kWqAvYiD8vqh/NIlKf7UdSt9oGxdhr8bvq0VO4HNVL5UefLsI
-        QFJgWPN82sXbN+6pYK/z9H5b4VzPO8DF2cYmRpc9+gar0/UdrsNlwSfr0DkHTbY8Jlu/V+yYnkkjqU5W
-        NIi3qFv+hhabecC1GRuTJBCejjblBtL0tAFYdhHtb1R/o8qTjX4TisYu45UaRNRj1LZZm/NhfMymQ23J
-        1nbtKVDWpVi3hsqDJCWZZFiL1NhLcw1aNG4Ju7UVy0VdxJNMLBfBHeMly4d/sUG8lRmJWLam56eJ+xTe
-        BdgZiaezmuJMuUdjnW2hn7gR3w/rnK5SE0iJqX9yk0p1L9FG9tVfopvr6/ZusaXVWWXhJyk01WHhabub
-        tBz1cwYYCA1s4qidXEpdiOioTdou30BdcNjnrE4GIJWxCM1ZSCj46pYM3ZzjjKsz8pCuspj4iJkc/hB5
-        hMGqHWoX+Wr/6LLHPnJTNKetRQQdWxSegOUyIZ6/czPfbC/MBYTvZruDckf36RkfjMkupY/pLM/R0W+1
-        cFPYeuY8JKxecSrvU0+op7pMK41hLSdnjAcGq9807nMdWEGMLMJltS3bcy7RDGojXssNZ95e2qpdfqx1
-        wuqfpx3xxXBE2+Y8I0ESGtJzHnWzhmBvU8St9sjLrE4cF5NsSF0oETwt6tanfgGEk07CUJjy9lCqkT9s
-        l3c1/UG4SPVd1T9k7c+s3CcCvDez2h5tcC5Sq4bHWt3iFbSZxZbLEvWbW4Pln1CPHgf3+uJg6mYFGoi0
-        kAarrgPnkFr4JquL40Etel/hph8lQs+nLgHdl/rROMM4zRY9hriljkK3aZwPqb7hfphvuEKuyd/CsSQy
-        0g+E0OLEPrI5GpOcYjPLswWHPjfSmMBP9rxdTjX1gNZGEpf6jWRurM5VDnUyZLM8lGLHNNBwf3fVnuAe
-        Gokbu+U14CQEhD/qE1ZvoW4qQB+yCd6vHE1nGpHWWP+suowSZC2rc55plsR9wJGX6f3LVdJRHhWxjrAO
-        uE9+mJ/R05lIg6uj6srof08vxi/Pi7rhpns1K9BHPScG3ZlnHL3sTLm66TpMAPcV4S76PUIUQXVwXRn1
-        fDSZ4+fYOwL0qnG3LHBUoT6uVj9xG/ErZyVlRxzzSvpGF9OdDaKoFFfVbpekRnUu0u3ig6yNs2nNQ36R
-        /ufSDx2uutCHcyDKgAZzcW4XBXgoXXyo8WaaajLgh/lCyq+k30fmQ3iK3f2EadZZEHroQpV0gjdFk9bw
-        damvLKMmjoqUomuoljqRuh4V4PXDL4l1I0nvsTpPvNp8bIjVdcvXxbuPzDrhyo5oINN9qee0uNNtAnZy
-        GsDCqQ/6cbv6WfAenOxcIN2UviJOrOoujv4snL9rxIGH0Z5AGIgeRAeGQcIjyHfIJXaiqx1xNoj+ed6j
-        XtZ9P+srzie2p07PWG76PWg3JsSdWvOnrC7WPmPQbhwSg4+AWxLAd2w8XQiUM2KVhsFT87W78A7qALjE
-        3pU+TX9LH/Qq1eUZrvRhcSq+pr3wNMCOGdrl+/QuPt6tUW3AWsVxqSrW1eLsGXDqNsAgqCA9kxHXxlbH
-        0gejCSdPq56eLoiA1zCwuO9IcBGK40Emv8Hapc/0zI5ubWSql0WfNVrgtMkBuwOTil8c2dSDds6C22RX
-        Ncq71IcYGqO1Ft3Geia4TVyXm5TFBiLrw/taT/Fx030yINo4T3ZIl9OPIwThcPNoSsasgQVqQPy2rYiP
-        sbb0lsrOTFulHyiuOd/fQZHbO9u5ikbdVKD2d/CeivuKGtvqxaXaeZIUTbdmukKfC6c7d04I1WF6V+t9
-        G3WoI+EQbHP6j0gRfVRqqZkVaMc4HCfquB48DIB2rXwI1vYDaxfnTCiIk/7d+khPgk8F4W+x+DEUNnUm
-        RqYKym3+vo17mfmCcnbNp1MRMV6ofkeIyKTR0gWSni1PeCpxE3H2j76b0Y9Wl66ZnHBw/FbvUzyc6mhW
-        IG74oA2ogD1wc13gOnBNeLjjxc3gHiqZleOw3ayiFnMMBOMZaMbSOMPUuU9pN7ScGN3yA03xnA78ONUM
-        mhEdoj7VuUoQXXNU54DjQcScX8z4XeNZmn/y0eqMgJ2whaXvFznBDO1EyI/GAl4fOJYRDr0a3M8djMAP
-        gANafPhpxVVRhZ7FoWacTXBBVIvYwy/QnCQdiLUfzXEngzaFA3VCR4hzZXKihXTc3FKICB5Hs6aSai70
-        Ww1ac/VqcI21FBzXCHzGEJPxUY+xoNAj4KNYUMy9nokdxzPLomfP3AQReuJcngROxjnwx5uH6hYHy5Lm
-        ea4ZpmYI1it32AtTAHpQ7U7EcGcs6+NiLnXhoZnENkLK6njDa6NYXQmOv+p4+Qj4jIETMwbCCoOH/2TW
-        ElwfjGfPRKu9fdWegW/EynkI5/oxCQPXWZ9GTDoZ7A60Fm/9OC3rlCejA59OmityjyRQZVw8w8P7MdbF
-        hju3ulTIcLm/aPr4iZ4YWxbIIpMZQ7Jy7mYtnrm7kerisAZcz+6MdsuPGN4j8FrwOGxHV23LWw2TgaSs
-        2j2+1kY9nVv20mskfG/MlJU26VR7H5dFEJKDq/QkutaMVZ03dCKLYOZwp2qaE9CARAYsxOLBxNNqalI/
-        DoygXR8c4uqJBQhteBK8dsj9w4BmHAuonTNgs/rpP/pGwLmmj/Xh0qGRGQfU13xO3gGPjeLS0HgeKeiZ
-        C+6Eaq8BF3Ocb3i3fLO3V6eApxM9JxC6YntP/PxuSfp2erYkap1PC8cUEQFH9A2PA2s9cw2tJrA452jh
-        W/IuTYif2hU2RmpdxOPYE/Givlm2pWcQ2XALNfMAS2PbYVcSSIR7u73HwbpAzxm6WfJU38p5DFZ87q66
-        YSiaekcTfJ5J0nppMstYNAyIiUVPlDwrXKfD4kochsTb3WnVOHb1Q89nWP84OpAb1C8c4slqFscxL+JI
-        LtHrRMTgRD1bsoNUFbjUykHgye1xns1cdigFob3dw1PzLR1fAz4voMEtCZDhWuLEkoHb6VdPEbuT28iz
-        mYVM/adnIzh6z3G/NpcpLz1zQifR9MihCemPpoGrHfxOebe12yXPHt7wIMyy9vDiYXD3KCxNZv7h3IOs
-        layyuKEaNx/LQzr02zjP6KtY4JN0D0Vdt1PHQQ51mUTQM1y0M38vovHNGc7bUuIia6/FWe4UuovnCDGZ
-        bzs4m2h4t9xh7eaYW/vj0c65DRxo68c/tPXYNw13JR19ua55gcjAsKCd4C/iim8DB+AKdA3P4cKovRq3
-        RoHhbeNYNw6Ip/AMmQxXn8T5WPAksJ45Lx7HRQLPDYE40T55g0wCMjJJPHOD2owMA7MoOipOz/T+nENO
-        1BBRww9dumGCJU0Q8eyAJjlKxHKR7x3M+4XJBoeBp+uiZ7sKrA+11JaeJ6sAu6LRMHLm/vTiXP/lQM8S
-        R6gYXsN+3dv2XNwZOUrrPD70s22YinzI6oLZXLWbEqSgbYKB01ZayiknXNS+1RKVk0ELtdO1WscFnolN
-        PXNwJJ3nmRQ92w2uOmyM/FxaVj1X4Fhrw+tIxc9+9XwreH2CGO0NL4BbZRDwoVxDEywzbT+tiLg6sk0z
-        Bg2yQjvzQM1BncJ10ol+TiERiwDeT/kngz7MnNOG22MfmG6Ons1IYG3BG26P/UAHfeftfnhf4xF3q57M
-        Df7fMmuPtJrGsVS9nrmryHymNyfkAE3ctb4uv9ur3pjpLMBD2OLgWWdjNMkEDpBStwyK2N6sohbsR5zT
-        5M6m8AM56+CDDg18BXid6QlnVpz+LsP9XJfxzwCn3vDw5dgIb6/uNNzvY9O/Ag9Li2eg4hGH3we0ef1Y
-        oVc4EbwgU3JzAhrUPliEOAQ8T/T19+xot8SBCPthcAglfFS7ahwqzuDuXs0R+msZF2JTcC04M9sWc6rd
-        DnLE2VcY7jcY1F58diocYyHcIg5SZ0Ec06Pp3BNmgiNJJHqpA8zIWQa6eG0EDCZNKlvm7JJRLSK9OzHO
-        /t3yk44XdmFHBPFkQnj7WvT7A88LSJeBo1O8v+cO61xct/wMeGRTINDDuD5BIDstwzAEbtmfdNZxnO2d
-        brnc8N4p4LXg4Q3YVRSVJ0lRscGTXRbGYwyImVZ91kAm2CaOkzct7uxYiP0wRbqDX4qDm3OaIiUC3Qbe
-        cGbvA4+sB/go+ih8M3Z+hx0X8E5Yzp7eDMupUMvxiMdDzOMYlDE3WurKLwrlzyFMV+IGaW3oz7SyvTJN
-        fnFOoKdjymFwOZyWEpeIbQSXbsz01jbw8BVZ5JMoYPw9nlXG9JzRillexCdwC/JFkL8y3K2g5iyOc9xi
-        1B3iZsto9/ETMWsv15lDb3U+Bn4oOH2jz9Z8D8C6h55Ft6f+nja/OGtocMwmRAqi6NkIgmXm9xf6YNvV
-        vZe7ftGzuSL5s4G0eih4a+8lWM3wpNgnlzcMwT0ZwTTBNiXcoSS6nZf4xm3pnVtXx8c444j5dOmzeQct
-        wJzT2nuPhICigBdbe7vwA/euJ0j17Ja2UxwFjv4EF0fZ1VxcFMMjbRQneHzoRvRScK0nJSJLMxkYO95Z
-        V0ctYSxUNqQR0Fz8Li8vn7PxFxp3yuBkNDPvoN22X2RqgQcZnq5H5vzi9L7We90iD6zvB++pgepecADO
-        TvEDNIef2caZBKIYY1xoHQTh442gCsKYxEVxT8urHn3qjrbEMjmOTJDWdqnqLMz7ujKfOhBAF/lk1Sng
-        aVhqV2MoLmAqrgQfGIo0kUSbXwax08LtUvl0PhabYe9E6sluGvh575b6vLZ3PmKHQ5y56BmxrVNakUjN
-        X2luyLQZYHd52uVbJSnXaKzmvwaYPx0I1L6XuAQ8Uu5MvAnixLkwR5jNGBVxqcVUxA7r7YYBsI0JpR8f
-        jqhtF8da3Btco3c8vRSijsXenpeUMvLIcYC4w5huyxj6L0PJbwhM8L0iuapn/wlDWFLbVfsQD9KF/6fj
-        hYlxXDLig9anYdBznHv4GOFm0GcFePiERBFjjfygJVxF1FvQfW7Uqv0zP5lgvp+rActPqojwxVWa41DG
-        Rc9G110DDfE5ELzh3be9vTos2m8E1yJbhkuM7UcsIppwd1/a9c1WfmVZqwJ9MJeOLMvMkabV5TlFxx33
-        4C7LimscC+cSxI1vU/26HB8gSxMb4zF8r8DJ5mjvEtDucb1jqz7Sr6hFelzlc+Ckp/RsIphcKsL47y+6
-        I3agJGK4WxEndhwDCIdDdtTXzoIL9e6HwJtOsXTe4dThpuTYWQdYhMH44bY0fziDakE6tIYrtemEoxiU
-        +6dyk3YJhGGwizp1KoobVP7xbzK8PkCKOJZQyXd+KoJZbE19EGccI2F9/Pe9EObx+tBd/h99VHZg1KgL
-        H5VzkbyQNCpiLZsqbYXFnhzK7XLQbmI5b8prYHGfmoXfzc7GrQVLgNY+Y+/usWVX4iAeoo6l462N4BSO
-        PvfXmei8nyNXKJOxImL+/GJcOnYo9Rq3D1TX/EUUhX9odjTtuy3g14V41JdyxGHuRIevxWVM4RKx8gvg
-        gPCTrE+3KiA8hBChLI+YWZvIssTvUKpb1MfCQrhddcZxei6bvxeJOzlIgf8gSKogmnZfEFd4vq5TXg4e
-        13bRjbXY4iyL0PX/aon4OX98aEYqPt4jiEgiRG7P/9uHnPdJF8fdousdxDaPCADzItTnqe4p7jbQuNq2
-        PqoQde6Y1FnmqUB6kn8dsC2jHQBCq84c5bzHHES0y51we3292I0N3JbRxoPUPyuBj0o3BLAUE2cYM7B4
-        iLARpF0+FFVujDL0U0QR1QZ+Kam4SptoRun/PWDtsdS4JVFlQCYIziYSiaoFWIAFWIAFWIBnE+yxx9cA
-        0wN8ak9Dp1YAAAAASUVORK5CYII=
-</value>
-  </data>
-  <data name="picLeftIndex.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+  <data name="PictureFingerPrint.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAAFAAAABQCAYAAACOEfKtAAAABGdBTUEAALGPC/xhBQAAF+9JREFUeF7t
         nAmYXlV5x+m+73trN2tL983a2motSvLNTBBwKVC1ZSkIIlWrrVtbMFSY7/smYSkiQsqqUmQHFWQ1RTL3
