Session creation enabled

--- a/StudentRecordManagementSystem/AdminControl.resx
+++ b/StudentRecordManagementSystem/AdminControl.resx
@@ -212,4 +212,27 @@
         6HjIYnedHwAAAABJRU5ErkJggg==
 </value>
   </data>
+  <data name="btnSession.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAAEAAAABACAYAAACqaXHeAAAABGdBTUEAALGPC/xhBQAAA/9JREFUeF7t
+        mk1rXWUUhTPpv6ig2IaWiqWt2lptibFY/LaVisGqadW2piI4EBy0OhBzQXAgOPBjIDgQHKgdSEVKLPZ2
+        6ET8AwFJ/fgTy7PLel/es+/N6drnniRGzgML7lp77Z1zM7hcSKZ6enp6enp6ev5r7DuDLVvfwGDreSzf
+        dh5oI+4u2i2e3TzcvoDBHQtAJ3odH/Ds5mHbOaxUQqUZRmHuPIdZ3viD0eZhx1nARNuaru6sO7teA0y0
+        2avi2sidTcPuVwETbfaquDZyZ92wT949pzHYexrLlRDUjfSa51rT1Z0w++cxuO8UMKl4rjVd3Qlz/8tY
+        qYQD8/FP8YOnMGu7JkY1Lg5x9d0hUOridSxxXKPpzppy6CXARBumaf/zJWCcOK4x6XO0ZuYkYKLN/lZi
+        fWS/5PJlYJw4rtF0Z0058gJgos3+VmJ9ZL/kt0vAOHFco+nOmnJ0DjDRhpl0P9HVnTCPPw+YaMNMup/o
+        6k6Yp54DTLQZn6u9Ej+LdNeN4ycAE23G52qvxM8iXZkz1Te5E89iUGm5EoK6kV7zXMbnaq/EzyJdmblj
+        GMwdByYVz2V8rvZK/CzSlTn5DFYqoVL4m9yLxzDL3ZEf7HO1V+Jnka7M/NOAiTbMavs+V3slfhbpyrzy
+        JNCFeC7jc7VX4meRrszZJ4AuxHMZn6u9Ej+LdGUWHgNMtGFW2/e52ivxs0hX5s1HARNtmNX2fa72Svws
+        0pV56yhgos34XO0lfK72Svws0pV5+xHARJvxudpL+FztlfhZpCvzzhHARJvxudqL0rTvZ5GuzIWHARNt
+        xudqL0rTvp9FujLvPQSYaDM+V3sJn6u9Ej+LdGXenwFMtBmfq72Ez9VeiZ9FujKLhwETbcbnai/hc7VX
+        4meRrsyHhwATbcbnai/hc7VX4meRrsxHDwAm2ozP1V7C52qvxM8iXZmPDwIm2ozP1V7C52qvxM8iXZlP
+        DgAm2ozP1V7C52qvLa3vfLofMNFmfK72Ej5Xe21pfeeLewETbcbnai/hc7VXcuF69eVmjDiu0XSnkS/v
+        AUy0GZ+rvYTP1V7JZ0vAOHFco+lOI1/tBUy0GZ+rvYTP1V7JuL8Lmjiu0XSnka/3ACbajM/VXsLnaq/k
+        9+8xrISavsMvHNdoutPIN7sBE22Yjd5PtL7z7d2AiTbMRu8nWt+5dBfQhXhOvsd67tOGn4drI3dkftgF
+        dCGek++xnvu04efh2sgdmR93AibaMBu9n2h958oO/FkJV6bxICOZn3bi8M3dDdpPFHdWGOlcncbg52ng
+        f6L4P0v/ug9bhtUv4dp2/FMJEQ23469r27Bo+zdfj+k0adL9Qn/bHXsvfFs9PT09PT09PWRq6l+820Ya
+        IGsljgAAAABJRU5ErkJggg==
+</value>
+  </data>
 </root>
