fingerprint registration for student enabled

--- a/StudentRecordManagementSystem/MainForm.resx
+++ b/StudentRecordManagementSystem/MainForm.resx
@@ -279,47 +279,47 @@
         20aj0XgEVqsfggLM5Gbyg9IAAAAASUVORK5CYII=
 </value>
   </data>
-  <metadata name="toolStrip1.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
-    <value>172, 17</value>
+  <metadata name="menu.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>172, 0</value>
   </metadata>
   <data name="btnSignOut.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAADAAAAAwCAYAAABXAvmHAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
-        YQUAAAAJcEhZcwAADsMAAA7DAcdvqGQAAAfgSURBVGhD7ZlrbJvVGcfDNrQPYxPwYUijWlootA252Ymd
-        xInjxrc4TuxcSuKkRRtCopomNISCtg/d2g+jrTookLUNILGPiKqCIsGHCmlXECAQtzI04lvixPZrv75f
-        EuLc/PA8fo9TY97XlyYtH5a/dKTI8XvO75z3ef7POcc1O9rRjrYuOHHiB4n+CWW6f2wyaR67mDCPfZHS
-        jcQKW9IwdDWpH7qY1I9MJnTDCnqGPf79aWn4yK70wMSZhGXclx6wQbrfBinzGLZRSPVhMz2I7RAke7EZ
-        RyBpoDYMCf0QJHQWb1w7eDqi7b+bdXfzlOg/fMeidfxcxDKRSVvGoXp4aoOQ0FohorRm4hrLVFwzeDvr
-        /sYqPTQ+tmidCKUtE7BV+HgPtoMWbAMQ6zIFI+q+Q2yY7RccPXpr2jr+EsIj+PbCxzU4ge5+bGbASVyA
-        lpZb2bDbI3509LaUdeLtGw0fU2Pr6oOwynQlYDD8hA2/NWVNph8vWg//uxr4KEIvIJwLoZzdfTCPgBEE
-        rwQ+2mmCqKoXoh2Gf9HYDOP6hfDT1a78PMItfnoV8lr8+DOcRF8V8NjajRBW6qcYxvUpPXjYVgl8vHcE
-        YhQyLGzcGjNDvyZnV+8mfATBwwRdAj7SZkCH0kOkVXd9ib1kHf/FonU4WQo+ifC8cQhcCLWgtWzGvEvT
-        x7Cvydlp3Fz5OZUR7B064BC6JLxCB7xMEw00Gn7OsCoXOs7L5eD9+kHw/ekpyMzN46r3byasC8OlWM5O
-        w2bYODr0+IwH5iePwXw7gkrAhxVaCLdqgZf3vMiwKtPyoG23xzKxVipsCD7w/DRANpsDpLDJu42r25T7
-        rFBOlWEz5h0InRM+6zt1FuaVOkn4cEsP+GsPrnKynlqGV14IfroUfNCAK//HP2/Ckyhs8lbpUveyT6+J
-        Vj0f8442HfsUhX3M//44+BFaDD4sPwghmQb4JvVJhldaoNH8KGY6FCyVsLMP/go2FpcYgSAKm7zPU8IW
-        KzcBlrB2pZZ9Kmhj6WuwY788QYvAh5q7gatX+2F09IcMU1rJQZtKCp6s0keQV/7Ohha0nkiCmybAfJ4S
-        tlgUNvmEdSh6cs8UKvbmFZiVd4vCh5rUwDeqIdCkVjJMaaUGbMek4ONok7Njv4bs+jobVhB39hxwmMR5
-        n6eELRaFTd5tfG164J7+K/uPIOrTgePwLQdF4fmGLuDrO//AMKWVNtveEIOnIhXGJOWn/8aGFJSZ9cAc
-        xn+soEjN4RtY/Py/7BtYyLCouWkCzG0imLBODJVl9xz7hiD/2fPgkyG0ODwEDrS/xjCllTCPfikGT0XK
-        h5DpDz9hwwkKPHseeLTHwgobwlifRddxYtg4EZzg+Q7jt6zSjxPgnr3AehGUfPd9mG3sEoXnH1CBv67j
-        C4YprZTZEhWDpyJFW4TVUIQNJ2j2yKMQzU2gsu1B3iopYd1jD7NeBK0EgmBv6BCFD9Z1QPBAe5hhSovX
-        aFfE4KlIkddnV1bYcIJcOivEqoQnqwzhG5hRfbtebGQyMFPfLgWPTZlhmNLymwZWxeCpSM0iHA1SKJcB
-        J1AlPFllCN+AHb9bqHW05v89gBMQhW+HwP4KJpAyWaJi8FSkPGiVK14fG07QHIZQhMCrgM9tD9BtXENH
-        WC+CKKntdTgBUfg2COxTlg8hhP1SDJ6KlB9DKPXBR2w4QYGpFyCoxk1ZFfC57QG6jffkM6wXQYl/vgMu
-        hJWAB/9eRfkkRujXxOCpSAUxVIr9m1bNTcBVwIfQ5+1NnbDscLFeBC0cPwU+AheBD9yvgMB9rZcYprQS
-        +pFjYvBUpMht3BYbZNfW2JCCqJB5catQCTwVKQ+6jPepp9nTgqiQfYWLwEnD4xtoKV/IksZBlRh83ue9
-        XSaIXLrMhhWUXVkFz2NPghf9nopUqZUnePcjj33HzcKvvg6u/UpJeG5vKwT2tJTfSuRu2TRD82LwZJV0
-        knKaRmAtnmBDC9pYXgb/X6awwmJ8IzT5PFkluQ0lLFVYe3NXbvtcDL+eSsNXWOi4EvC+Pc1uqKm5hWGW
-        Ft2YicHnrZJOUp7fPPGdUCJRTnDPTYP7oaNg77Hkmmv4IfCdeQ6WcdtRrOz6BriPPg4etvpi8Ny9LcDd
-        I6tsO01Kay13xXuMX4vB592GTlLe4ydFJ1GxNjZg4cQpcO9XlIG/fylwT2N1x8q4xnK+1PaAjoF0kvL8
-        djIXAtVqPYlb8Ed/B659CFsSXo7hI3ueYVWuiMn0M4TnylVYHyaqA/Mlevmt3IqWU3Z1FUKvXIIZNb7F
-        smEjB/+een94376fMqzqFFUP2CqpsJSwdBhxGIfBj3Ui9d6HuXhfT6ZgLRqDzIIPEv/4D4bLaZjB/twH
-        sCgdaKsAXgbcL2Vbuy+NqM3TlVbYvNvQltjRoAI7bsxmcG9jr2sDN24RvNhK+XwxvK+2aWsXWyQ6h0ZV
-        xsuVFimpw4jU9kASfnfz62ib2/MjCK/R3BZt73375sE3XQnc1bg9l7t50ZV3RKF/6UbD+3c3Xvh4u6/X
-        CxVV6McQPrTd8N67ZcEtJ2ylSjR03YH7mnNhuTKzZfg75Rn0+am52qab8xNToSINml2hZvWZQJ3aVzV8
-        rdzL7ZadXtjVdPN/5CsWuQVdOgXrOyf5uo6LdHsQvK81tgmPfyP0VW5vy0XuXvkkt6dVsW0Os6Md/V+r
-        puYbOOaf8F809i0AAAAASUVORK5CYII=
+        YQUAAAAJcEhZcwAAFiUAABYlAUlSJPAAAAfWSURBVGhD7ZlZbBtVFIbDJh5YBDxQARVtodA2ZLMTO4kT
+        x028xHFiZymJkxYBQqJCCIFQEDwU2gdoqwIFQtsAEjwiqgqKBA8VEjsCBGIrIIi3bLbH+54QZ/PhHM91
+        asyMlyYtD+SXrhQ5nnu/e+ec/5wZl61rXetaveDAgUujnUPyROfAcMwwcDJqGPg1ru4LZ4+YtudsTNNz
+        MqbpG46qe2V0Dbv8v9Ns756Nia6hI1HjoCvRZYZEpxnihgEc/RDvwKG/G8cuiLXj0PVBTEujF6KaHoiq
+        jc5IW/fhYFvnLWy6i6do5+7rZ0yDx4LGoWTCOAilw9PohmibCYJyUzKiMo5EVN3XsekvrBI9gwMzpiF/
+        wjgEq4WPtOLYacTRBeFmvTeo7NjFlll7wd69VyRMg28gPIKvLXxEhRto6cRhANzECaitvYItuzby9fdf
+        HTcNfXSh4cNKHM0dEFDoz3i02qvY8qtTSq+/csa0+/NS4EMIPY1wdoSytXTAFAIGEbwY+FCTHkKKdgg1
+        aj+jtRnG+QvhR0s9+SmEm/npLGQ088PPuImOEuBxNOggINeMMIzzU6J7t7kY+Eh7H4QpZFjYOFQGhn5O
+        tub2FfggggcIOg98sF6LDqWBYJ36/BJ71jR484ypN5YPPobwPl0P2BFqus24EvN2VQfDPidbk27l5CcU
+        OrA0qoFD6LzwMjX4JKqQp0p7I8MqXug4bxaCd2u6wfXMc5CcmMJT71xJWDuGS65sTdqVsLE2avCaSZga
+        3gdTDQgqAh+QtUGgrg180tbXGVZxmus2b54wDi3mCxuC97wyCpBKpQEpbDJuY2/Rpz/Llk2hXYl5K0Kn
+        hde6Dh2FKblaFD5Q2wrum3YucJLWTQyvsBD8cD54rxZP/ulnV+BJFDYZq7Qr29mn50Snnol5a72afYrC
+        Oaae3A9uhBaCD0h3gl+iAl+18iDDyy9QqS4P63d58yXs+N33wvLMLCPgRWGT8XlK2FylN8AS1iJvY5/y
+        Wp79Cyw4r4+gBeD9NS3AVSjd0N9/GcMUV6zbrBCDJ6t0EeSZj9nSvJaiMXDQBpjPU8LmisImk7BWWWv6
+        mmyFPzgD49IWQXh/tRJ8VUrwVCvlDFNc8S7zPjH4CNrk+MB9kFpaYsvy4o4eAw6TOOPzlLC5orDJuI2r
+        XgPcC6+y//CiOa24jq92pyC8r7IZfBVNTzFMcSUM5veF4KlIBTBJfaNvsSV5JccnYQLjP5xVpCbwDsz8
+        8hv7BhYyLGoO2gBzmyAmrA1DZc4xwb7By330OLgkCC0MD54dDe8yTHFFDf2/C8FTkXIhZOK7H9lyvDwv
+        HQcf2mN2hfVjrI+j69gwbGwITvC+Rt0/rNKNG+BeOsFm4RX76hsYr2oWhPfdpQB3eeOvDFNccYMxJARP
+        RYpahAV/kC3Ha3zPgxBKb6C49iBjlZSwjoH72Sy85j1esFQ2CsJ7yxvBu6MhwDDF5VOp5oXgqUiR16fm
+        59lyvOxqE4RLhCer9OMdGFP8s14sJ5MwVtEgBo9DnmSY4nLruxaE4KlIjSMcLZItuxY3UCI8WaUf74AF
+        v5utJbTmP+7CDQjCN4BnexEbiOuNISF4KlKTaJXzThdbjtcEhlCQwEuAT7cH6Db2nj1sFl6U1JZy3IAg
+        fD14tskLhxDC/i4ET0XKjSEU//Z7thwvz8hr4FViU1YCfLo9QLdxHnyRzcIr+umXYEdYEXhwb5UVTmKE
+        flcInoqUF0Ml17/p1BwEXAK8H33eUt0Ec1Y7m4XX9P5D4CJwAXjPnTLw3FF3imGKK6rp2ycET0WK3MZh
+        NENqcZEtyYsKmRNbhWLgqUhNoss4n3uBXc2LCtmfeAicODzegdrChSym61YIwWd83tmsh+Cp02xZXqn5
+        BZh85Alwot9Tkcp38gTveOCRf7lZ4J33wL5dLgrPba0Dz5bawq1E+i2bqmdKCJ6skp6kbPo+WIxE2dK8
+        lufmwP38CFZYjG+EJp8nqyS3oYSlCmupaU63z7nwS/EE/ImFjssD79pS44CysksYZn7RGzMh+IxV0pPU
+        5EOP/yuUSJQT3Muj4LhnL1hajelh770HXEdehjlsO3KVWloGx97HYJKdvhA8d3stcLdJimunSYk244ZI
+        q+4vIfiM29CTlHP/QcFNFK3lZZg+cAgc22UF4O+c9dxWVdpjZURlPJ6vPaDHQHqSmnx4OB0CpWophi34
+        g4+CfRvC5oWXYvhIXmFYxSuo11+L8FyhCuvCRLVivoROf5g+0UJKLSyA/+1TMKbEu1gwbKTg3lLhDmzb
+        dg3DKk0hZZe5mApLCUsPI1ZdL7ixTsS//i4d70uxOCyGwpCcdkH0ky8wXA7DGM7n2IFFaUd9EfAS4G6V
+        rO59aVBpGC22wmbchlpia6UCLNiYjWFvYymvBwe2CE4c+Xw+F961qXp1L7ZI9BwaUuhOF1ukxB5GxNoD
+        UfjNNe+hba7NjyDYYl8damj/6OLBV5/xbKham5e7GdEr76BM88aFhndvrjrxw1q/Xs9WSKYZQHj/WsM7
+        b5F4V52wxSpa2Xw99jXHAlJ5ctXwN0iT6PMjE5uqL85PTNkKVqo2+muURzzlSlfJ8JukTm6z5PD0xuqL
+        /yNfrsgt6KWTt6Jp2FfeeJLeHnjvqAuvwOPfCH2W21p7krtdOsxtqZOtmcOsa13/a5WV/Q1WW5/mv83p
+        QQAAAABJRU5ErkJggg==
 </value>
   </data>
   <metadata name="$this.TrayHeight" type="System.Int32, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
