Student assesment enabled

--- a/StudentRecordManagementSystem/Department/StudentBioManager.resx
+++ b/StudentRecordManagementSystem/Department/StudentBioManager.resx
@@ -132,4 +132,100 @@
   <metadata name="gender.UserAddedColumn" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
     <value>True</value>
   </metadata>
+  <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
+  <data name="$this.Icon" type="System.Drawing.Icon, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        AAABAAIAEBAAAAEAIABoBAAAJgAAACAgAAABACAAqBAAAI4EAAAoAAAAEAAAACAAAAABACAAAAAAADAE
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAEBqqgwAAAAAAAAAAAAAAAAAAAAAS3iWEVSRrpRUka6UQICPEAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAFlzphRYerHLAAAAAAAAAAAAAAAAUo+tbWSkxtaDy/L/g8zy/2Wk
+        xtVTjaxrAAAAAAAAAAAAAAAAAAAAAAAAAABjg7yGh67p+1t8s0YAAAAAV5Owe3m94/OFzvX/hc71/4XO
+        9f+FzvX/eL3j8laRsXkAAAAAAAAAAAAAAAAAAAAAXYC4cG6RyuZYdbA9S3iWEWmqzd+FzvX/hc71/4XO
+        9f+FzvX/hc71/4XO9f9pqsveQICPEAAAAAAAAAAAAAAAAAAAAABKaqFnAAAAAFCIplx9xOr/hc71/4XO
+        9f+FzvX/hc71/4XO9f+FzvX/fsXq/1CHo1kAAAAAAAAAAAAAAAAAAAAASmqhZwAAAABPg6Tjhc71/2eC
+        j/95sMz/hc71/4XO9f95r8v/aIOQ/4TN9f9OhKXiAAAAAAAAAAAAAAAAAAAAAEpqoWdFfJglRnGY/YHI
+        7/95sM3/gcTo/4XO9f+FzvX/gcTn/3qxzv+EzfT/SHOa/EJ8mSMAAAAAAAAAAAAAAABKaqFnR4CcEmR0
+        h/pSeKH/W422/2yp0P9+xOv/hc71/4XO9f+EzfT/Xomw/2RzhvpLeJYRAAAAAAAAAAAAAAAASmqhZ5eE
+        aBuZjoj8rZ+U/5SNjv+EhIz/f4GJ/4GFi/+OlZn/lY+O/62flP+Zjoj8l4RoGwAAAAAAAAAA/wAAAW13
+        kK+0n43fnJKK/9TBsP/UwbD/1MGw/9TBsP/UwbD/1MGw/9TBsP/UwbD/nJKK/7Sgjd6jjXty/wAAAZmF
+        ca2UlqH91MGw/8Swn/+zn43/t6OR/8Csmv/FsqH/xbKh/8Crmv+3o5H/s5+N/8Swn//UwbD/xrOi/JuF
+        c6uSbW0HjoOCp7yol+jUwbD/1MGw/9TAr//PvKv/y7en/8u3p//QvKv/1MCv/9TBsP/UwbD/vKiX6KGK
+        eZiSbW0HAAAAAAAAAACYhHY0qZWBx8y4p/vUwbD/1MGw/9TBsP/UwbD/1MGw/9TBsP/MuKf7qZWBx6CH
+        eDMAAAAAAAAAAAAAAAAAAAAAAAAAAKpVVQOeineJtqCP4tPAr//UwbD/1MGw/9PAr/+2oI/inop3iapV
+        VQMAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAJN8bCGlkX27xrOi+MazovelkX27k3xsIQAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAJuGdGGciXZfAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAP5/AAC8PwAAOB8AALAPAADwDwAA4AcAAOAHAADgBwAA4AcAAIAD
+        AAAAAAAAgAEAAOAHAADwDwAA/D8AAP//AAAoAAAAIAAAAEAAAAABACAAAAAAAIAQAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAP8BSHiXIEJ7lB8AAP8BAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAEtqozpVVaoGAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAASHydTkmBnuVRi6ruUYuq7kmBnuVDfJpMAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAP8BUHGo2U9vp24AAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAR3iVJEqEoLRRi6rufcTq/4XO9f+FzvX/fcTq/1GLqe5Mg6CzQnyZIwAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAExrpFFliMDuUXKp5TNmmQUAAAAAAAAAAAAA
+        AAAAAAAAAAAAAEuBnHdPiabpdrve/4XO9f+FzvX/hc71/4XO9f+FzvX/hc71/3a63f9PiKXpSH6bdQAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAU3Sqz5G48/9wk8zxS2uiWAAA
+        AAAAAAAAAAAAAAAAAABLgp+FWZa18ITN8/+FzvX/hc71/4XO9f+FzvX/hc71/4XO9f+FzvX/hc71/4TN
+        8/9YlLTwTIGhgAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAE1mphRbe7PnnMT//5C3
+        8f9UdKu/AAAAAAAAAAAAAAAARXybSlOOre+EzfT/hc71/4XO9f+FzvX/hc71/4XO9f+FzvX/hc71/4XO
+        9f+FzvX/hc71/4TN8/9TjavvRXyZRgAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAASmqfGFl6
+        suqbw/7/jbTu/1Jzq8MAAAAAAAAAAICAgAJJgp/ifsXr/4XO9f+FzvX/hc71/4XO9f+FzvX/hc71/4XO
+        9f+FzvX/hc71/4XO9f+FzvX/hc71/33E6v9Kgp/ggICAAgAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAUXGqflN0q/ZSc6riSWekKgAAAAAAAAAARnqWSV6bvPCFzvX/hc71/4XO9f+FzvX/hc71/4XO
+        9f+FzvX/hc71/4XO9f+FzvX/hc71/4XO9f+FzvX/hc71/12auu9FfJlGAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAASWuimUtpoDMAAAAAAAAAAAAAAABLg6Cjdbne/4XO9f+FzvX/hc71/4XO
+        9f+FzvX/hc71/4XO9f+FzvX/hc71/4XO9f+FzvX/hc71/4XO9f+FzvX/dLjc/0qCn58AAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAABJa6KZS2mgMwAAAAAAAAAAAAAAAEuCoNeByO//hc71/4XO
+        9f+FzvX/hc71/4XO9f+FzvX/hc71/4XO9f+FzvX/hc71/4XO9f+FzvX/hc71/4XO9f+AyO7/SoSg1QAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAElroplLaaAzAAAAAAAAAABDfJhISoKf/ITN
+        9f+FzvX/gMDi/2Z/jP96stD/hc71/4XO9f+FzvX/hc71/4XO9f+FzvX/erPQ/2Z/jP+AwOL/hc71/4XN
+        9P9Kgp/8RXyVRgAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAASWuimUtpoDMAAAAAgICAAkiB
+        neI8YIj/hc71/4XO9f9mgYz/TUA2/1xlaP+FzvX/hc71/4XO9f+FzvX/hc71/4XO9f9bZWb/TUA2/2eB
+        jv+FzvX/hc71/zxhiP9JgJ7hAAD/AQAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAABJa6KZS2mgMwAA
+        AABDeZg5VI+v6zVSfP+FzvX/hc71/3qxzv9bY2b/c561/4XO9f+FzvX/hc71/4XO9f+FzvX/hc71/3Ke
+        s/9bY2b/erPQ/4XO9f+FzvX/NVJ8/1SPrutCe5c2AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAElr
+        oplLaaAzAAAAAEN7l1tcmLj5NE96/33A6P+FzvX/hc71/4XO9f+FzvX/hc71/4XO9f+FzvX/hc71/4XO
+        9f+FzvX/hc71/4XO9f+FzvX/hc71/4TN8/80T3r/XZi5+EV7lVkAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAASWuimUtpoDMAAAAARXqUQ06EpfQ5V4P/RGaS/3Gv1v+EzfP/hc71/4XO9f+FzvX/hc71/4XO
+        9f+FzvX/hc71/4XO9f+FzvX/hc71/4XO9f+FzvX/YJW+/zRQe/9QhKfzRnyXQgAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAABJa6KZS2mgMwAAAACAgIACd3d33HRze/9Ubpf/QmSS/0Bhjf9FaJX/UHul/1+T
+        u/9tqND/fsTr/4XO9f+FzvX/hc71/4XO9f+FzvX/gsnw/1F8pv9MZIf/c3N6/3d4d9oAAP8BAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAElroplLaaAzAAAAAAAAAACKe3DPsJyL/5iIfP+NfnT/fnyB/2Z0
+        j/9Vbpb/TGeU/0Njk/9BYo//RGaR/2qjzf+GyOv/hr7b/3aRo/95dXj/jH1y/5mIfP+xnYv/i3tvzgAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAASWuimUtpoDP/AAABlIBrZIh7cfvHsqH/1MGw/9G/
+        rf/Cr53/s6CP/6CPg/+Yh3n/lIJ0/5F+b/+RfnD/k4Fy/5mIev+gj4H/tKCP/8Kvnf/Rv63/1MGw/8ey
+        of+Ie3H7lIBrZP8AAAEAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAABJa6KZZW6LUZeAbc2qloTyjYJ6/8ey
+        of/UwbD/1MGw/9TBsP/UwbD/1MGw/9TBsP/UwbD/1MGw/9TBsP/UwbD/1MGw/9TBsP/UwbD/1MGw/9TB
+        sP/UwbD/x7Kh/46Cev+qloPxlYBtzY54YyQAAAAAAAAAAAAAAAAAAAAAmWZmBV1vlc6KfnzvxrKg/9TB
+        sP+YiX3/wq+d/9TBsP/UwbD/1MGw/9TBsP/UwbD/1MGw/9TBsP/UwbD/1MGw/9TBsP/UwbD/1MGw/9TB
+        sP/UwbD/1MGw/9TBsP/Cr53/mot+/9TBsP/GsqD/mYRx65eAboSZZmYFAAAAAJB7Zz6Vfmzec36Z+7mv
+        rP/UwbD/1MGw/8KunP+dh3X/qJKA/76qmP/Rvq3/1MGw/9TBsP/UwbD/1MGw/9TBsP/UwbD/1MGw/9TB
+        sP/UwbD/1MGw/9C9rP++qZj/p5KA/5yIdf/Cr53/1MGw/9TBsP/UwK//s52N9ZV+bN6Qe2c+lH5rX5eB
+        buh3g579ua+t/9TBsP/UwbD/1MGw/9TBsP/FsZ//sZ2K/6KNev+dh3T/pZF+/6yYhv+ynYz/uKSS/7ik
+        kv+ynov/rZeF/6WQfv+dh3T/oo16/7Gci//Esp//1MGw/9TBsP/UwbD/1MGw/9TBsP+9qZf7l4Fu6JV9
+        bV4AAAAAjntoG3F0htuTiIXxzrup/9TBsP/UwbD/1MGw/9TBsP/UwbD/1MGw/9PAsP/Luaf/wq6c/72p
+        l/+9qZf/vamX/72pl//Crpz/y7mn/9PAsP/UwbD/1MGw/9TBsP/UwbD/1MGw/9TBsP/Ou6n/pZB+7pWA
+        bbyLdGgWAAAAAAAAAAAAAAAAAAAAAI14ZVOWgG7muqaU+dTAr//UwbD/1MGw/9TBsP/UwbD/1MGw/9TB
+        sP/UwbD/1MGw/9TBsP/UwbD/1MGw/9TBsP/UwbD/1MGw/9TBsP/UwbD/1MGw/9TBsP/UwK//uqaU+ZeA
+        buONeWdKAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAIl2Yg2VgGymnYh168u4pv/UwbD/1MGw/9TB
+        sP/UwbD/1MGw/9TBsP/UwbD/1MGw/9TBsP/UwbD/1MGw/9TBsP/UwbD/1MGw/9TBsP/UwbD/yrel/52I
+        duuVf2uflYBqDAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAACOe2g2loBt3LKd
+        jfPTv6//1MGw/9TBsP/UwbD/1MGw/9TBsP/UwbD/1MGw/9TBsP/UwbD/1MGw/9TBsP/UwbD/07+v/7Kd
+        jPOWgG3cjntoNgAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AACZZmYFlH5ripiEcOzFsZ/+1MGw/9TBsP/UwbD/1MGw/9TBsP/UwbD/1MGw/9TBsP/UwbD/1MGw/8Wx
+        n/6Zg3DslX5sgoCAgAQAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAjXllJpV+bM6qloTw0L2s/9TBsP/UwbD/1MGw/9TBsP/UwbD/1MGw/9C9
+        rP+qloTwloBuyI94aCAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAJF8bG2XgW7rv6ya/NTBsP/UwbD/1MGw/9TB
+        sP++q5r8l4Jv55N+bGMAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAIxzZhSVgG27o4977s26
+        qf/Nuqn/o4577JWAbbKMc2YUAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AACTfWg7lYBs3pWAbN2Re2o6AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAACZZmYFmWZmBQAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAP///////D//3/AP/8/gB/+PgAH/h4AB/4cAAP/PAAD/3gAAf94A
+        AH/eAAB/3AAAP9wAAD/cAAA/3AAAP9wAAD/cAAA/3AAAP9AAAA/AAAADgAAAAYAAAAHAAAAD8AAAD/gA
+        AB/+AAB//wAA///AA///8A////gf///+f///////
+</value>
+  </data>
 </root>
